# proofline

./: .env.example  .gitignore  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
apps/coordinator/: package.json
apps/coordinator/src/: server.ts
apps/web/: DESIGN-NOTES.md
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: chrome.tsx  icons.tsx
contracts/base/: foundry.toml
contracts/base/src/: CRELevel3Receiver.sol  FinalityRegistry.sol  MockWormholeCore.sol  Ownable.sol
evidence/mainnet/full-deploy/: d2-mainnet.json
evidence/mainnet/live-18257739/: final-record.json  manifest.json  memo-broadcast.json  memo-preview.json  raw-proof-response.json  strategy.canonical.json
evidence/runs/live-final-mainnet/: events.ndjson  handoff.json  level3-attestor.state.json  vaa-decoded.json  (+5 more)
programs/proofline-adapter/: Anchor.toml
programs/proofline-adapter/programs/proofline-adapter/: Cargo.toml
programs/proofline-adapter/programs/proofline-adapter/src/: lib.rs
programs/proofline-adapter/programs/proofline-adapter/src/instructions/: mod.rs  on_report.rs  proof_buffer.rs  publish_outcome.rs  verify_outcome.rs
programs/proofline-adapter/programs/proofline-adapter/src/state/: config.rs  proof_buffer.rs  verified_outcome.rs
programs/proofline-adapter/programs/proofline-adapter/src/txline/: instruction.rs  mod.rs  return_data.rs
programs/proofline-adapter/programs/proofline-adapter/src/wormhole/: emitter.rs  mod.rs  payload.rs
programs/proofline-adapter/programs/proofline-adapter/tests/: txline_golden.rs
(+30 files in other folders)
