[package]
name = "proofline-adapter"
version = "0.1.0"
description = "Proofline Level 4 source-leg adapter: TxOracle CPI verification + Wormhole core-messaging emission"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "proofline_adapter"

[features]
default = []
wormhole = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
solana-keccak-hasher = { version = "3.1.0", features = ["sha3"] }
txline-kit-cpi = { path = "/home/claude/code/txodds/txline-kit/crates/txline-kit-cpi" }

[dev-dependencies]
serde_json = "1"
